# ACTLab_Quanser_2026_Contest

./: .gitattributes  .gitignore  CLAUDE.md  README.md  guide.md  package.xml  run_mission.sh  setup.cfg  setup.py  test_scspath_replication.py
acc_stage1_mission/: dashboard.py  (+14 more)
cpp/: CMakeLists.txt  acados_mpcc_solver.h  build.sh  coordinate_transform.h  cubic_spline_path.h  mission_manager_node.cpp  mpcc_controller_node.cpp  mpcc_solver.cpp  mpcc_solver.h  mpcc_solver_interface.h  mpcc_types.h  obstacle_tracker_node.cpp  odom_from_tf_node.cpp  package.xml  path_modifier.h  road_boundaries.cpp  road_boundaries.h  road_graph.cpp  road_graph.h  sign_detector_node.cpp  state_estimator_node.cpp  traffic_light_map_node.cpp  yaml_config.h
cpp/acados_ocp/: acados_ocp_mpcc.json  generate_mpcc_solver.py
cpp/acados_ocp/c_generated_code/: Makefile  acados_sim_solver_mpcc_qcar2.c  acados_sim_solver_mpcc_qcar2.h  acados_solver_mpcc_qcar2.c  acados_solver_mpcc_qcar2.h  main_mpcc_qcar2.c  main_sim_mpcc_qcar2.c
cpp/acados_ocp/c_generated_code/mpcc_qcar2_constraints/: mpcc_qcar2_constr_h_e_fun.c  mpcc_qcar2_constr_h_e_fun_jac_uxt_zt.c  mpcc_qcar2_constr_h_e_fun_jac_uxt_zt_hess.c  mpcc_qcar2_constr_h_fun.c  mpcc_qcar2_constr_h_fun_jac_uxt_zt.c  mpcc_qcar2_constr_h_fun_jac_uxt_zt_hess.c
cpp/acados_ocp/c_generated_code/mpcc_qcar2_cost/: mpcc_qcar2_cost_ext_cost_0_fun.c  mpcc_qcar2_cost_ext_cost_0_fun_jac.c  mpcc_qcar2_cost_ext_cost_0_fun_jac_hess.c  mpcc_qcar2_cost_ext_cost_e_fun.c  mpcc_qcar2_cost_ext_cost_e_fun_jac.c  mpcc_qcar2_cost_ext_cost_e_fun_jac_hess.c  mpcc_qcar2_cost_ext_cost_fun.c  mpcc_qcar2_cost_ext_cost_fun_jac.c  mpcc_qcar2_cost_ext_cost_fun_jac_hess.c
cpp/acados_ocp/c_generated_code/mpcc_qcar2_model/: mpcc_qcar2_expl_ode_fun.c  mpcc_qcar2_expl_ode_hess.c  mpcc_qcar2_expl_vde_adj.c  mpcc_qcar2_expl_vde_forw.c  mpcc_qcar2_model.h
cpp/launch/: cpp_mission_launch.py
cpp/test_build/: acados_ocp_mpcc.json  blended_dropoff_to_hub.csv  blended_pickup_to_dropoff.csv  combined_mission.csv  combined_ref_dropoff_to_hub.csv  deployment_dropoff_to_hub.csv  deployment_pickup_to_dropoff.csv  diagnose_startup  diagnose_startup.cpp  diagnose_steering  diagnose_steering.cpp  diagnose_stuck  diagnose_stuck.cpp  diagnose_swerving  diagnose_swerving.cpp  full_mission_sim.csv  full_mission_sim_qlabs.csv  full_mission_traffic.csv  plot_combined_mission.py  plot_deployment.py  plot_full_mission.py  plot_mapframe_startup.py  plot_results.py  run_tests.sh  test_all  test_all.cpp  test_all_noroadgraph  test_deployment  test_deployment.cpp  test_full_mission_sim  test_full_mission_sim.cpp  test_mapframe_startup  test_mapframe_startup.cpp  test_mpcc  test_mpcc_solver  test_mpcc_solver.cpp  test_path_tangents  test_path_tangents.cpp  test_road_graph_only
cpp/test_build/c_generated_code/: Makefile  acados_sim_solver_mpcc_qcar2.c  acados_sim_solver_mpcc_qcar2.h  acados_solver.pxd  acados_solver_mpcc_qcar2.c  acados_solver_mpcc_qcar2.h  main_sim_mpcc_qcar2.c
cpp/test_build/c_generated_code/mpcc_qcar2_constraints/: mpcc_qcar2_constr_h_e_fun.c  mpcc_qcar2_constr_h_e_fun_jac_uxt_zt.c  mpcc_qcar2_constr_h_e_fun_jac_uxt_zt_hess.c  mpcc_qcar2_constr_h_fun.c  mpcc_qcar2_constr_h_fun_jac_uxt_zt.c  mpcc_qcar2_constr_h_fun_jac_uxt_zt_hess.c  mpcc_qcar2_constraints.h
cpp/test_build/c_generated_code/mpcc_qcar2_cost/: mpcc_qcar2_cost.h  mpcc_qcar2_cost_ext_cost_0_fun.c  mpcc_qcar2_cost_ext_cost_0_fun_jac.c  mpcc_qcar2_cost_ext_cost_0_fun_jac_hess.c  mpcc_qcar2_cost_ext_cost_e_fun.c  mpcc_qcar2_cost_ext_cost_e_fun_jac.c  mpcc_qcar2_cost_ext_cost_e_fun_jac_hess.c  mpcc_qcar2_cost_ext_cost_fun.c  mpcc_qcar2_cost_ext_cost_fun_jac.c  mpcc_qcar2_cost_ext_cost_fun_jac_hess.c
cpp/test_build/c_generated_code/mpcc_qcar2_model/: mpcc_qcar2_expl_ode_fun.c  mpcc_qcar2_expl_ode_hess.c  mpcc_qcar2_expl_vde_adj.c  mpcc_qcar2_expl_vde_forw.c
cpp/test_build/results/20260226_133436/: blended_hub_to_pickup.csv  blended_pickup_to_dropoff.csv  combined_ref_dropoff_to_hub.csv  deployment_hub_to_pickup.csv  deployment_pickup_to_dropoff.csv  full_mission_sim.csv  mapframe_startup.csv
cpp/test_build/results/20260226_135843/: blended_pickup_to_dropoff.csv  combined_ref_dropoff_to_hub.csv  deployment_hub_to_pickup.csv  deployment_pickup_to_dropoff.csv  full_mission_sim.csv  full_mission_sim_qlabs.csv  mapframe_startup.csv
cpp/test_build/results/20260226_140015/: combined_mission.csv  full_mission_traffic.csv  swerving_hw2.csv
cpp/test_build/results/20260226_140221/: blended_dropoff_to_hub.csv  deployment_dropoff_to_hub.csv  swerving_hw0.csv
cpp/test_build/results/20260226_150845/: blended_dropoff_to_hub.csv  combined_mission.csv  combined_ref_dropoff_to_hub.csv  combined_ref_pickup_to_dropoff.csv  deployment_dropoff_to_hub.csv  deployment_hub_to_pickup.csv  deployment_pickup_to_dropoff.csv  full_mission_sim.csv  full_mission_sim_qlabs.csv  full_mission_traffic.csv  mapframe_startup.csv
cpp/test_build/results/20260226_151437/: deployment_dropoff_to_hub.csv  deployment_hub_to_pickup.csv  deployment_pickup_to_dropoff.csv
cpp/test_build/results/20260226_151835/: combined_mission.csv  deployment_dropoff_to_hub.csv  full_mission_traffic.csv  swerving_hw0.csv
cpp/test_build/results/20260226_152037/: blended_dropoff_to_hub.csv  combined_ref_dropoff_to_hub.csv  combined_ref_pickup_to_dropoff.csv  deployment_hub_to_pickup.csv  deployment_pickup_to_dropoff.csv  full_mission_sim.csv  full_mission_sim_qlabs.csv  mapframe_startup.csv
cpp/test_build/results/20260226_152327/: combined_ref_dropoff_to_hub.csv  swerving_hw0.csv
cpp/test_build/results/20260226_152745/: combined_mission.csv  combined_ref_pickup_to_dropoff.csv  mapframe_startup.csv
cpp/test_build/results/20260226_152936/: blended_dropoff_to_hub.csv  combined_mission.csv  combined_ref_dropoff_to_hub.csv  combined_ref_pickup_to_dropoff.csv  deployment_dropoff_to_hub.csv  deployment_hub_to_pickup.csv  deployment_pickup_to_dropoff.csv  full_mission_sim.csv  full_mission_sim_qlabs.csv  full_mission_traffic.csv  mapframe_startup.csv
cpp/test_build/yaml-cpp/: yaml.h
(+41 files in other folders)
